# cppbenchmark

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README.txt  run.sh
src/adt/: CMakeLists.txt  adt.cpp
src/adt/container/functional/: functional.cpp
src/adt/container/immutable/: immutable.cpp
src/adt/container/list/: insert.cpp  linked_list.h  plf_list.h  range.cpp  remove.cpp  splice.cpp
src/adt/container/map/: decay.cpp  find_hetero.cpp  interval.cpp  order_find.cpp  order_range.cpp  reserve.cpp  unorder_erase.cpp  unorder_find.cpp  unorder_range.cpp
src/adt/container/set/: order_find.cpp  order_range.cpp  reserve.cpp  unorder_erase.cpp  unorder_find.cpp  unorder_range.cpp
src/adt/container/small/: node.cpp  small.cpp  string.cpp  twine.cpp
src/adt/container/vector/: Small.cpp  remove.cpp  reserve.cpp  row_col.cpp  vectors.cpp
src/adt/container/vfast/: fast_map.cpp  fast_set.cpp  fast_unmap.cpp  fast_unset.cpp
src/allocator/: CMakeLists.txt  MemoryPool.h  MemoryPool.tcc  compiler.h  gcc.h  ll_alloc.c  ll_asm.h  ll_list.h  main.cpp  ming.h  win_stub.cc
src/allocator/foonathan_memory/: CHANGELOG.md  CMakeLists.txt  README.md
src/allocator/foonathan_memory/cmake/: configuration.cmake
src/allocator/foonathan_memory/src/: CMakeLists.txt  heap_allocator.cpp  memory_pool_collection.cpp  static_allocator.cpp  virtual_memory.cpp
src/allocator/foonathan_memory/tool/: CMakeLists.txt
src/allocator/memory-allocators/: CMakeLists.txt  README.md
src/allocator/memory-allocators/includes/: Allocator.h  Benchmark.h  CAllocator.h  DoublyLinkedList.h  DoublyLinkedListImpl.h  FreeListAllocator.h  IOS.h  LinearAllocator.h  PoolAllocator.h  SinglyLinkedList.h  SinglyLinkedListImpl.h  StackAllocator.h  StackLinkedList.h  StackLinkedListImpl.h  Utils.h
src/allocator/memory-allocators/src/: Benchmark.cpp  CAllocator.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp  main.cpp
src/astar/: AStar.cpp  AStar.hpp  CMakeLists.txt  bench_astar.cpp  memorypool.h
src/branch/: 01a_branch_predicted.cpp  01b_branch_mispredicted.cpp  01c_branch_predicted.cpp  01d_bad_hint.cpp  02a_false_branch.cpp  02b_false_branch.cpp  02c_false_branch.cpp  03a_branch.cpp  03b_branchless.cpp  03c_branch_predicted.cpp  03d_branchless_predicted.cpp  04a_branch.cpp  04b_branchless.cpp  04c_branch.cpp  04d_branchless.cpp  05a_branch.cpp  05b_branchless.cpp  06a_func_branch.cpp  06b_func_branchless.cpp  07a_binpow_branch.cpp  07b_binpow_branchless.cpp  07c_binpow2_branch.cpp  07d_binpow2_branchless.cpp  CMakeLists.txt  delete.cpp
src/container/: CMakeLists.txt
src/container/boost/: multi_index.cpp  multi_index_decay.cpp  multi_index_map.cpp  multi_index_map_string.cpp  multi_index_ranked.cpp  multi_index_set.cpp  multi_index_set_string.cpp
src/container/hash/: hash.cpp  hasher_find.cpp
src/container/hash/internal/: city.cc  city.h  citycrc.h  config.h  murmurhash3.cpp  murmurhash3.h  wyhash.h  wyhash32.h  xxh_x86dispatch.c  xxh_x86dispatch.h  xxhash.h
src/container/list/: insert.cpp  linked_list.h  plf_list.h  pmr.cpp  range.cpp  remove.cpp  splice.cpp
src/container/map/: combine.cpp  decay.cpp  find_hetero.cpp  order_bound.cpp  order_erase.cpp  order_erase_if.cpp  order_find.cpp  order_pmr.cpp  order_range.cpp  reserve.cpp  unorder_erase.cpp  unorder_erase_if.cpp  unorder_find.cpp  unorder_pmr.cpp  unorder_range.cpp  unordered_find_smart.cpp
src/container/set/: order_erase.cpp  order_erase_if.cpp  order_find.cpp  order_pmr.cpp  order_range.cpp  reserve.cpp  unorder_erase.cpp  unorder_erase_if.cpp  unorder_find.cpp  unorder_pmr.cpp  unorder_range.cpp
src/container/sorted/: pod.cpp  sorted_map.cpp  sorted_set.cpp  sorted_unmap.cpp  sorted_unset.cpp
src/container/unique/: unique.cpp
src/container/value/: variant_any.cpp
src/container/vector/: dimension.cpp  push_pop.cpp  remove.cpp  reserve.cpp  sorted.cpp  sorted_map.cpp  vectors.cpp
src/container/vfast/: fast_map.cpp  fast_set.cpp  fast_unmap.cpp  fast_unset.cpp  fast_vector.cpp
src/coroutine/: CMakeLists.txt  generator.cpp
src/coroutine/fiber/boost/: boost.cpp  detach.cpp
src/coroutine/fiber/brpc/: brpc.cpp
src/coroutine/fiber/folly/: folly.cpp  sorted.cpp  sorted_string.cpp  vectors.cpp
src/cpu/: CMakeLists.txt  cache_line.cpp  cache_size.cpp  dimension.cpp  false_share.cpp  linear.cpp  mul_div.cpp  multi_alu.cpp  predict.cpp  reorder.cpp  row_col.cpp  size_dealloc.cpp  smart.cpp
src/crypto/: CMakeLists.txt
src/crypto/cryptopp/: crypto_dh.cpp  rc5_aes.cpp
src/crypto/openssl/: rc5_aes.cpp
src/handler/: CMakeLists.txt  function.cpp  handler.cpp  long_jump.cpp  pg_siglongjmp.h  segvcatch.cpp  segvcatch_bench.cpp  sig_longjump.cpp
src/logging/: CMakeLists.txt  logging.cpp  logging_lockfree.cpp
src/logging/lockfree/include/: concurrentqueue.h  mpmp_queue.hpp
src/memory/: CMakeLists.txt  alloc.cpp  copy.cpp  fragment.cpp  logic_smart.cpp  memory.cpp  node.cpp  overhead.cpp  overhead_je.cpp  overhead_mi.cpp  overhead_tc.cpp  page.cpp  rss.cpp  rss_je.cpp  rss_mi.cpp  rss_smart.cpp  rss_tc.cpp  size_allocator.cpp  smart_leak.cpp  virtual_all.cpp  zero_page.cpp
src/protobuf/: CMakeLists.txt  report.pb.cc  report.pb.h  reserve.cpp  tricks.cpp
src/random/: CMakeLists.txt  engine.cpp  mt19937.cpp  pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp  pcg_variants.h  random.cpp  xorshift.cpp
src/random/SFMT/: CMakeLists.txt  SFMT-alti.h  SFMT-common.h  SFMT-neon.h  SFMT-params11213.h  SFMT-params1279.h  SFMT-params132049.h  SFMT-params19937.h  SFMT-params216091.h  SFMT-params2281.h  SFMT-params4253.h  SFMT-params44497.h  SFMT-params607.h  SFMT-params86243.h  SFMT-sse2-msc.h  SFMT-sse2.h  SFMT.c  SFMT.h
src/string/: CMakeLists.txt  conventions.cpp  format.cpp  string_cat.cpp  string_format.cpp  string_from.cpp  string_length.cpp  string_move.cpp  string_split.cpp  string_to.cpp  string_view.cpp
src/timer/: CMakeLists.txt  atomic.h  boost.cpp  event_timer.cpp  folly.cpp  format.cpp  spinlock.h  timer.cpp  timer.h  uv_timer.cpp  wheel_timer.cpp
(+1052 files in other folders)
