add_executable(branch delete.cpp)
target_compile_options(branch PRIVATE -fno-omit-frame-pointer)
add_executable(01a_branch_predicted 01a_branch_predicted.cpp)
add_executable(01b_branch_mispredicted 01b_branch_mispredicted.cpp)
add_executable(01c_branch_predicted 01c_branch_predicted.cpp)
add_executable(01d_bad_hint 01d_bad_hint.cpp)
add_executable(02a_false_branch 02a_false_branch.cpp)
add_executable(02b_false_branch 02b_false_branch.cpp)
add_executable(02c_false_branch 02c_false_branch.cpp)
add_executable(03a_branch 03a_branch.cpp)
add_executable(03b_branchless 03b_branchless.cpp)
add_executable(03c_branch_predicted 03c_branch_predicted.cpp)
add_executable(03d_branchless_predicted 03d_branchless_predicted.cpp)
add_executable(04a_branch 04a_branch.cpp)
add_executable(04b_branchless 04b_branchless.cpp)
add_executable(04c_branch 04c_branch.cpp)
add_executable(04d_branchless 04d_branchless.cpp)
add_executable(05a_branch 05a_branch.cpp)
add_executable(05b_branchless 05b_branchless.cpp)
add_executable(06a_func_branch 06a_func_branch.cpp)
add_executable(06b_func_branchless 06b_func_branchless.cpp)
add_executable(07a_binpow_branch 07a_binpow_branch.cpp)
add_executable(07b_binpow_branchless 07b_binpow_branchless.cpp)
add_executable(07c_binpow2_branch 07c_binpow2_branch.cpp)
add_executable(07d_binpow2_branchless 07d_binpow2_branchless.cpp)