add_executable(cache_line cache_line.cpp)
add_executable(false_share false_share.cpp)
add_executable(row_col row_col.cpp)
add_executable(predict predict.cpp)
add_executable(linear linear.cpp)
add_executable(dimension dimension.cpp)
#add_executable(time_zone time_zone.cpp)
target_link_libraries(linear PRIVATE tcmalloc)
add_executable(size_dealloc size_dealloc.cpp)
target_link_libraries(linear PRIVATE tcmalloc)
target_link_libraries(size_dealloc PRIVATE tcmalloc)
target_compile_options(size_dealloc PRIVATE -fsized-deallocation)
