add_executable(cache_line cache_line.cpp)
add_executable(cache_size cache_size.cpp)
add_executable(false_share false_share.cpp)
add_executable(dimension dimension.cpp)
add_executable(linear linear.cpp)
add_executable(mul_div mul_div.cpp)
add_executable(multi_alu multi_alu.cpp)
add_executable(predict predict.cpp)
add_executable(reorder reorder.cpp)
add_executable(row_col row_col.cpp)
#add_executable(time_zone time_zone.cpp)
add_executable(size_dealloc size_dealloc.cpp)
add_executable(smart_ptr smart.cpp)
target_link_libraries(linear PRIVATE tcmalloc)
target_link_libraries(linear PRIVATE tcmalloc)
target_link_libraries(size_dealloc PRIVATE tcmalloc)
target_compile_options(size_dealloc PRIVATE -fsized-deallocation)
