add_executable(function_lambda function.cpp)
add_executable(handler handler.cpp )
add_executable(long_jump long_jump.cpp sig_longjump.cpp)
add_executable(segvcatch_bench segvcatch_bench.cpp segvcatch.cpp sig_longjump.cpp)
target_compile_options(segvcatch_bench PRIVATE -fnon-call-exceptions)
target_compile_options(long_jump PRIVATE -fsanitize=address)
target_link_options(long_jump PRIVATE -fsanitize=address)