find_package(absl REQUIRED)
add_executable(string_view string_view.cpp)
add_executable(string_split string_split.cpp)
add_executable(string_from string_from.cpp)
add_executable(string_to string_to.cpp)
add_executable(string_format string_format.cpp)
add_executable(string_cat string_cat.cpp)
add_executable(string_move string_move.cpp)
add_executable(string_length string_length.cpp)

target_compile_features(string_format PRIVATE cxx_std_20)

target_link_libraries(string_split PRIVATE absl::strings protobuf)
target_link_libraries(string_from PRIVATE absl::strings absl::str_format fmt protobuf)
target_link_libraries(string_to PRIVATE absl::strings absl::str_format fmt protobuf)
target_link_libraries(string_format PRIVATE absl::strings absl::str_format fmt protobuf)
target_link_libraries(string_cat PRIVATE absl::strings absl::str_format fmt protobuf)